# level2_movierecommendation_recsys-level2-recsys-05

./: .gitignore  README.md  pyproject.toml
code/: pretrain.py  train.py
code/base/: base_trainer.py
code/data_loader/: data_loaders.py  dataset.py
code/model/: model.py
code/trainer/: trainer.py
code/utils/: util.py
eda/: (미션-1) EDA.ipynb  EDA_PYU.ipynb  EDA_gt.ipynb  EDA_jm.ipynb  EDA_msk.ipynb
eda/.ipynb_checkpoints/: (미션-1) EDA-checkpoint.ipynb  EDA_gt-checkpoint.ipynb
feature_engineering/: feature_engineering_gt.ipynb
