[tool.poetry]
name = "movie"
version = "0.1.0"
description = ""
authors = ["Gyeongtae <kmd1801@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"
torchvision = "^0.14.1"
numpy = "^1.23.5"
tqdm = "^4.64.1"
tensorboard = "^2.11.0"
pandas = "^1.5.2"
python-dateutil = "^2.8.2"
pytz = "^2022.6"
scipy = "^1.9.3"
six = "^1.16.0"
typing-extensions = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
